<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Suraksha</string>
    <string name="login">Log In</string>
    <string name="finish">Finish</string>
    <string name="onboard1">Shake your phone 5 times\nto activate SOS and share\nyour location with your\nemergency contacts.</string>
    <string name="onboard2">Get instant help from the\nemergency government\nhelpline numbers.</string>
    <string name="onboard3">Police siren to deter potential\nattackers by creating the\nillusion that the user has\nactivated an alarm or signal.</string>
    <string name="logo">logo</string>
    <string name="welcome_back">Hello, Welcome back!\nYou are safe with us.</string>
    <string name="log_in_to_continue">Log in to continue!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_user_sign_up_now">New User? Sign Up Now!</string>
    <string name="go">LOG IN!</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="welcome">Welcome!\nYou are safe with us.</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="city">City/Town</string>
    <string name="pin_code">Pin Code</string>
    <string name="age">Age</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="state">State</string>
    <string name="area">Area, Street, Sector, Village</string>
    <string name="apartment">Flat, House, Building, Apartment</string>
    <string name="change_password">Change Password</string>
    <string name="call_100">Call 100</string>
    <string name="gender">Gender</string>
    <string name="name">Name</string>
    <string name="save_changes">Save Changes</string>
    <string name="suraksha">SURAKSHA</string>
    <string name="hi_welcome_to_suraksha">Hi, Welcome to SURAKSHA.</string>
    <string name="stay_fearless">“Stay fearless and confident with Suraksha\n- your personal safety guardian.”</string>
    <string name="fake_siren">Fake Siren</string>
    <string name="emergency_helpline">Emergency Helpline</string>
    <string name="about_us">About Us</string>
    <string name="textview">TextView</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="how_to_use">How to use?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="log_out">Log out</string>
    <string name="sos">SOS</string>
    <string name="women_in_distress">Women in Distress</string>
    <string name="domestic_abuse">Domestic Abuse</string>
    <string name="police">Police</string>
    <string name="child_helpline">Child Helpline</string>
    <string name="ambulance">Ambulance</string>
    <string name="fire_brigade">Fire Brigade</string>
    <string name="senior_citizen">Senior Citizen</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="about_suraksha">An open-source Android app for instant SOS alerts\nwith location, enhancing women\'s safety in India</string>
    <string name="twitter">Twitter</string>
    <string name="github">GitHub</string>
    <string name="rate_us">Rate Us!</string>
    <string name="developed_by">Developed By</string>
    <string name="vivek">Vivekraj Singh Sisodiya</string>
    <string name="satyam_sharma">Satyam Sharma</string>
    <string name="android_developer">Android Developer</string>
    <string name="shreya_shukla">Shreya Shukla</string>
    <string name="website">Website</string>
    <string name="linkedin">LinkedIn</string>
    <string name="instructions">Instructions</string>
    <string name="email_sent">Almost there!\nWe\'ve sent you a verification email.</string>
    <string name="verify_email">You need to verify your email address to log into Suraksha App.</string>
    <string name="email_verified">Your email is being verified\.\.\.</string>
    <string name="verification">Verification</string>
    <string name="enter_email">Enter your Email ID to receive reset link!</string>
    <string name="send_reset_link">Send Reset Link!</string>
    <string name="enter_new_password">Enter new password!</string>
    <string name="confirm_password">Confirm password</string>
    <string name="new_password">New password</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="yash_darbar">Yash Darbar</string>
    <string name="web_developer">Web Developer</string>
    <string name="warning">Warning to accept permission!</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="add_emergency_contact">Add Emergency Contact</string>
    <string name="phone">Phone</string>
    <string name="google_maps_api_key">AIzaSyD1o_WmNskKB8qjN8LE_IlTzfJmu86IIok</string>
    <string name="email_check" tools:ignore="TypographyDashes">^[A–Za–z0-9+_.-]+@([A-Za-z0-9.-]+\\.[A-Za-z]{2,})$</string>
    <string name="configuring_emergency_contacts_instruction">• Navigate to \'Emergency Contacts\'. \n• Add up to 5 trusted contacts. \n• Ensure they are informed and understand their role.</string>
    <string name="configuring_emergency_contacts">1. Configuring Emergency Contacts</string>
    <string name="sos_activation">2. SOS Activation</string>
    <string name="sos_activation_instruction">• Press the SOS button to activate shake-to-alert. \n• For emergencies, shake your device more than five times to send an alert. \n• To deactivate, open Suraksha and click the SOS button again.</string>
    <string name="fake_siren_alert">3. Fake Siren Alert</string>
    <string name="fake_siren_alert_instruction">• Click \'Fake Siren\' to emit a loud siren. \n• Click again to stop the fake siren.</string>
    <string name="emergency_helplines">4. Emergency Helplines</string>
    <string name="emergency_helplines_instruction">• Go to \'Emergency Helplines\'. \n• Tap on helpline to call immediately.</string>
    <string name="continuous_safety_feature">5. Continuous Safety Feature</string>
    <string name="continuous_safety_feature_instruction">• After activating SOS, a notification appears indicating the active safety mode. \n• This works even if the app is in the background.</string>
    <string name="best_practices">6. Best Practices</string>
    <string name="best_practices_instruction">• Always be familiar with the app’s layout. \n• Keep the GPS active for precise location sharing. \n• Regularly update Suraksha for the latest features.</string>
    <string name="suraksha_introduction">At Suraksha, our utmost priority is your safety along with the protection of your personal data. This Privacy Policy elucidates how Suraksha collects, uses, shares, and safeguards your information. By using our app, you consent to the practices detailed herein.</string>
    <string name="data_we_collect">1. Data We Collect</string>
    <string name="data_we_collect_instruction">Personal Information: This encompasses details like your name, email address, phone number, age, address, pin code, city, and state.\n  \nLocation Data: When the GPS is activated, your location coordinates are fetched for immediate response during SOS activations. If the GPS is off, we do not capture location but notify your emergency contacts regarding its status.\n  \nEmergency Contacts: These details are stored both in your phone\'s memory and the third-party database \"Appwrite.\" For emergency alerts, the app utilizes contacts from your phone memory.</string>
    <string name="how_we_use_use_your_data">2. How We Use Your Data</string>
    <string name="how_do_we_use_your_data_instruction">• To enable the core features of Suraksha, such as sending SOS alerts and GPS status during emergencies.\n  \n• To dispatch email notifications, reminders, updates, and newsletters pertinent to Suraksha.\n  \n• For internal analysis and enhancement of app functionalities.</string>
    <string name="data_sharing">3. Data Sharing</string>
    <string name="data_sharing_instruction">Emergency Situations: In emergent situations, your location coordinates (if GPS is on) or GPS status (if off) are communicated to your emergency contacts.</string>
    <string name="data_security">4. Data Security</string>
    <string name="data_security_instruction">• We adopt best-in-class security protocols to shield your data from unauthorized intrusion, modification, or eradication.\n  \n• Both Suraksha and "Appwrite" uphold stringent security standards to guarantee data protection.\n  \n• Users are urged to maintain the confidentiality of their Suraksha account passwords.</string>
    <string name="data_retention">5. Data Retention</string>
    <string name="data_retention_instruction">• We sustain your personal data only for the duration necessary to serve the purposes for which it was collected, inclusive of any legal, accounting, or reporting prerequisites.</string>
    <string name="your_rights">6. Your Rights</string>
    <string name="your_rights_instruction">Access: You possess the right to request a copy of the personal data we retain about you.\n  \nCorrection**: Upon identifying any inaccuracies in the data we hold about you, you have the right to ask for corrections.\n  \nDeletion: Under specific conditions, you can seek the deletion of your personal data.</string>
    <string name="changes_to_the_privacy_policy">7. Changes to the Privacy Policy</string>
    <string name="changes_to_the_privacy_policy_instruction" tools:ignore="StringEscaping">• Periodically, this Privacy Policy might undergo revisions. Such changes take effect immediately upon posting. It is advisable for users to frequently revisit this section to stay abreast of any updates.</string>
    <string name="contact_us">8. Contact Us</string>
    <string name="contact_us_instruction">• For any uncertainties or concerns related to this Privacy Policy or the treatment of your data, feel free to connect with us at satverse.work@gmail.com.</string>
    <string name="conclusion">Conclusion</string>
    <string name="conclusion_instruction">At Suraksha, your safety and privacy are paramount. We are resolute in our commitment to uphold your trust by being transparent about our data practices and safeguarding your data diligently. We encourage users to acquaint themselves with our privacy ethos, and for any concerns, we are here to assist.\n  \nThank you for opting for Suraksha. Prioritize safety!</string>
    <string name="terms_and_conditions">Please read these Terms and Conditions carefully before using the Suraksha mobile application (\"the App\"), developed and provided by Satverse (\"us\", \"we\", or \"our\").\n\nBy accessing or using the App, you agree to be bound by these Terms and Conditions. If you do not agree with any part of these Terms and Conditions, you must not access or use the App.</string>
    <string name="general_use">1. General Use</string>
    <string name="general_use_detail">• The App is intended for personal use only and must not be used for any commercial purposes.\n  \n• Users must be at least 13 years old to use the App. If you are under 13, you must obtain parental or guardian consent.</string>
    <string name="security_and_features"><![CDATA[2. Services & Features]]></string>
    <string name="security_and_features_detail">• We provide the App \"as is\", with all its features and functionalities. While we strive for accuracy and reliability, we do not guarantee the uninterrupted or error-free operation of the App.\n  \n• Users must ensure their device’s GPS and other settings are accurate and functional, as the efficacy of the App depends on these.</string>
    <string name="user_responsibility">3. User Responsibilities</string>
</resources>