<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userlogin.SignUpActivity"
    android:orientation="vertical"
    android:background="#fff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:padding="20dp"
        android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="102dp"
            android:layout_height="142dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            android:src="@drawable/app_logo"
            android:transitionName="logo_image" />

        <TextView
            android:id="@+id/logo_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="10dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="TextSizeCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/slogan_text"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:text="@string/log_in_to_continue"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                app:hintTextColor="#757575"
                android:textColorHint="#757575"
                app:boxStrokeColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/name"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:hintTextColor="#757575"
                android:textColorHint="#757575"
                app:boxStrokeColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                app:hintTextColor="#757575"
                android:textColorHint="#757575"
                app:boxStrokeColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:id="@+id/phone_no"
                    android:textColor="@color/black"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                app:hintTextColor="#757575"
                android:textColorHint="#757575"
                app:boxStrokeColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/age"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apartment"
                app:hintTextColor="#757575"
                android:textColorHint="#757575"
                app:boxStrokeColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/apartment"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/area"
                app:hintTextColor="#757575"
                android:textColorHint="#757575"
                app:boxStrokeColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/area"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pin_code"
                app:hintTextColor="#757575"
                android:textColorHint="#757575"
                app:boxStrokeColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/pincode"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                app:hintTextColor="#757575"
                android:textColorHint="#757575"
                app:boxStrokeColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state"
                app:hintTextColor="#757575"
                android:textColorHint="#757575"
                app:boxStrokeColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/state"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:hintTextColor="#757575"
                android:textColorHint="#757575"
                app:passwordToggleTint="@color/black"
                app:passwordToggleEnabled="true"
                app:boxStrokeColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/create_account"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:backgroundTint="@color/suraksha"
            android:onClick="createUser"
            android:text="@string/create_account"
            android:textSize="14sp"
            android:textColor="@color/white"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/login_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:textColor="@color/black"
            android:onClick="alreadyUser"
            android:text="@string/already_have_an_account_login"
            android:layout_gravity="center"
            android:elevation="0dp"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>
</ScrollView>